unpackaged/main/default/objects/FSL_Configuration_Setting__mdt/FSL_Configuration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>FSL Configuration Setting</label>
    <pluralLabel>FSL Configuration Settings</pluralLabel>
</CustomObject>