unpackaged/main/default/objects/FSL_Configuration_Setting__mdt/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Activation Date</description>
    <label>Activation Date</label>
    <type>DateTime</type>
</CustomField>