unpackaged/main/default/objects/FSL_Configuration_Setting__mdt/fields/No_of_Retries__c.field-meta.xml
<CustomField>
    <fullName>No_of_Retries__c</fullName>
    <defaultValue>1</defaultValue>
    <label>No of Retries</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>