unpackaged/main/default/objects/FSL_Configuration_Setting__mdt/fields/Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Release_Number__c</fullName>
    <label>Release Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>